Criado através do Colab

--- a/Aula_05.ipynb
+++ b/Aula_05.ipynb
@@ -749,7 +749,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SJHL1s3ScLOd",
-        "outputId": "b86c4e6c-cbe1-4b41-d28c-f45b08115928"
+        "outputId": "1eb687ef-9982-4f7a-e95a-a708234ddcd9"
       },
       "execution_count": null,
       "outputs": [
@@ -757,12 +757,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Nomes  Idades  Salarios          Cidade\n",
-            "0    Ana      23      3000       São Paulo\n",
-            "1  Bruno      35      4500  Rio de Janeiro\n",
-            "2  Carla      30      4000  Belo Horizonte\n",
-            "3  Diego      40      5000        Curitiba\n",
-            "4    Eva      28      3500          Recife\n"
+            "   Nomes  Idades  Salarios  Salarios_Ajustas          Cidade\n",
+            "0    Ana      23      3200            3520.0       São Paulo\n",
+            "1  Bruno      35      4500            4950.0  Rio de Janeiro\n",
+            "2  Carla      30      4000            4400.0  Belo Horizonte\n",
+            "3  Diego      40      5000            5500.0        Curitiba\n",
+            "4    Eva      28      3500            3850.0          Recife\n"
           ]
         }
       ]
@@ -809,16 +809,16 @@
     {
       "cell_type": "code",
       "source": [
-        "df.drop(\"Cidade\", axis=1, inplace=True)\n",
+        "nova_df = df.drop(\"Cidade\", axis=1, inplace=False)\n",
         "\n",
-        "print(df)"
+        "print(nova_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FW-NVC15ckq_",
-        "outputId": "fc1047bb-2153-4b3e-e631-abc16ed49b14"
+        "outputId": "a59468e5-8797-424f-8ebc-9bacd16197ec"
       },
       "execution_count": null,
       "outputs": [
@@ -826,12 +826,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Nomes  Idades  Salarios\n",
-            "0    Ana      23      3200\n",
-            "1  Bruno      35      4500\n",
-            "2  Carla      30      4000\n",
-            "3  Diego      40      5000\n",
-            "4    Eva      28      3500\n"
+            "   Nomes  Idades  Salarios  Salarios_Ajustas\n",
+            "0    Ana      23      3200            3520.0\n",
+            "1  Bruno      35      4500            4950.0\n",
+            "2  Carla      30      4000            4400.0\n",
+            "3  Diego      40      5000            5500.0\n",
+            "4    Eva      28      3500            3850.0\n"
           ]
         }
       ]
