Criado através do Colab

--- a/Lista_de_exercicios_3_Andreia_Campos.ipynb
+++ b/Lista_de_exercicios_3_Andreia_Campos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNtdjt2JwXpptdKRGpZqwo",
+      "authorship_tag": "ABX9TyOxCdhn5KZGJN7Z89W3bz+5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2314,13 +2314,13 @@
     {
       "cell_type": "code",
       "source": [
-        "if 'Area' in gerentes_df.columns:\n",
-        "  gerentes_df['Area']=gerentes_df['Gerente'].fillna('Não Atribuído')\n"
+        "if 'Área' in gerentes_df.columns:\n",
+        "  gerentes_df['Área']=gerentes_df['Gerente'].fillna('Não Atribuído')\n"
       ],
       "metadata": {
         "id": "EsnlYUHfwAZ6"
       },
-      "execution_count": 98,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -2339,7 +2339,11 @@
         "\n",
         "**5. Merge:**\n",
         "\n",
-        "*   Combine os dois DataFrames com base no identificador do gerente (ou outra coluna comum).\n"
+        "*   Combine os dois DataFrames com base no identificador do gerente (ou outra coluna comum).\n",
+        "*   Use uma junção inner e exiba o resultado.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "cDmz3EQdwA4j"
@@ -2828,7 +2832,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*   Use uma junção inner e exiba o resultado. Quantas linhas resultaram dessa operação?"
+        "*  Quantas linhas resultaram dessa operação?"
       ],
       "metadata": {
         "id": "c9idq_dGwrHJ"
@@ -2958,7 +2962,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Por padrão, o join() utiliza os índices dos DataFrames para realizar a junção. Enquanto que o merge usa uma coluna do dataframe.***"
+        "***O join e o merge são usados para combinar dataframes. Por padrão, o join() utiliza os índices dos DataFrames para realizar a junção. Enquanto que o merge usa uma coluna do dataframe.***"
       ],
       "metadata": {
         "id": "dxyCvvxLP9HG"
@@ -2967,7 +2971,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4.Análise Exploratória e Modelagem"
+        "#4. Análise Exploratória e Modelagem"
       ],
       "metadata": {
         "id": "2zoWQ6j6yyqN"
