--- a/data_science_fundamentals/aula7/Exercicios_aula7.ipynb
+++ b/data_science_fundamentals/aula7/Exercicios_aula7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ92hWTyPLRJ/lZR7jJU7l",
+      "authorship_tag": "ABX9TyNQNYGDvP2amaWlPCmSNfp6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,11 +63,11 @@
       ],
       "metadata": {
         "id": "mQiLtynrQSxH",
-        "outputId": "41dce8e3-4e40-479e-ab32-9b8a2c43ef25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "41dce8e3-4e40-479e-ab32-9b8a2c43ef25"
       },
       "execution_count": 22,
       "outputs": [
@@ -711,105 +711,18 @@
         "plt.ylabel(\"Total de vendas\")\n",
         "plt.ylim(nb_vendas_gerente.min() - 100 , nb_vendas_gerente.max() + 100)\n",
         "plt.xticks(rotation=90)\n",
-        "plt.show\n"
+        "plt.show()\n"
       ],
       "metadata": {
-        "id": "3CBF4nYUFA7J",
-        "outputId": "53deec63-a240-419d-b612-fee8f8d6bd6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 785
-        }
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function matplotlib.pyplot.show(close=None, block=None)>"
-            ],
-            "text/html": [
-              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
-              "      pre.function-repr-contents {\n",
-              "        overflow-x: auto;\n",
-              "        padding: 8px 12px;\n",
-              "        max-height: 500px;\n",
-              "      }\n",
-              "\n",
-              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
-              "        cursor: pointer;\n",
-              "        max-height: 100px;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <pre style=\"white-space: initial; background:\n",
-              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
-              "         border-bottom: 1px solid var(--colab-border-color);\"><b>matplotlib.pyplot.show</b><br/>def show(*args, **kwargs) -&gt; None</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/usr/local/lib/python3.11/dist-packages/matplotlib/pyplot.py</a>Display all open figures.\n",
-              "\n",
-              "Parameters\n",
-              "----------\n",
-              "block : bool, optional\n",
-              "    Whether to wait for all figures to be closed before returning.\n",
-              "\n",
-              "    If `True` block and run the GUI main loop until all figure windows\n",
-              "    are closed.\n",
-              "\n",
-              "    If `False` ensure that all figure windows are displayed and return\n",
-              "    immediately.  In this case, you are responsible for ensuring\n",
-              "    that the event loop is running to have responsive figures.\n",
-              "\n",
-              "    Defaults to True in non-interactive mode and to False in interactive\n",
-              "    mode (see `.pyplot.isinteractive`).\n",
-              "\n",
-              "See Also\n",
-              "--------\n",
-              "ion : Enable interactive mode, which shows / updates the figure after\n",
-              "      every plotting command, so that calling ``show()`` is not necessary.\n",
-              "ioff : Disable interactive mode.\n",
-              "savefig : Save the figure to an image file instead of showing it on screen.\n",
-              "\n",
-              "Notes\n",
-              "-----\n",
-              "**Saving figures to file and showing a window at the same time**\n",
-              "\n",
-              "If you want an image file as well as a user interface window, use\n",
-              "`.pyplot.savefig` before `.pyplot.show`. At the end of (a blocking)\n",
-              "``show()`` the figure is closed and thus unregistered from pyplot. Calling\n",
-              "`.pyplot.savefig` afterwards would save a new and thus empty figure. This\n",
-              "limitation of command order does not apply if the show is non-blocking or\n",
-              "if you keep a reference to the figure and use `.Figure.savefig`.\n",
-              "\n",
-              "**Auto-show in jupyter notebooks**\n",
-              "\n",
-              "The jupyter backends (activated via ``%matplotlib inline``,\n",
-              "``%matplotlib notebook``, or ``%matplotlib widget``), call ``show()`` at\n",
-              "the end of every cell by default. Thus, you usually don&#x27;t have to call it\n",
-              "explicitly there.</pre>\n",
-              "      <script>\n",
-              "      if (google.colab.kernel.accessAllowed && google.colab.files && google.colab.files.view) {\n",
-              "        for (const element of document.querySelectorAll('.filepath')) {\n",
-              "          element.style.display = 'block'\n",
-              "          element.onclick = (event) => {\n",
-              "            event.preventDefault();\n",
-              "            event.stopPropagation();\n",
-              "            google.colab.files.view(element.textContent, 569);\n",
-              "          };\n",
-              "        }\n",
-              "      }\n",
-              "      for (const element of document.querySelectorAll('.function-repr-contents')) {\n",
-              "        element.onclick = (event) => {\n",
-              "          event.preventDefault();\n",
-              "          event.stopPropagation();\n",
-              "          element.classList.toggle('function-repr-contents-collapsed');\n",
-              "        };\n",
-              "      }\n",
-              "      </script>\n",
-              "      </div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
+          "height": 554
         },
+        "id": "3CBF4nYUFA7J",
+        "outputId": "286162d3-11d0-4981-f02d-b80916f5322e"
+      },
+      "execution_count": 34,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
