--- a/4_data_visualization/avaliacao/avaliacao_data_viz.ipynb
+++ b/4_data_visualization/avaliacao/avaliacao_data_viz.ipynb
@@ -2385,10 +2385,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**R:**\n"
+    "**R:**\n",
+    "\n",
+    "O título da infografia é explícito quanto ao tema abordado. Os títulos das seções ilustram claramente os aspectos analisados. A ordem da análise segue uma lógica coerente. Além disso, o esquema de cores é uniforme, facilitando a leitura.\n",
+    "\n",
+    "Pontos a melhorar:\n",
+    "\n",
+    "    No gráfico de barras, é apresentada a evolução do número de estrangeiros ao longo dos anos de 2011 a 2021. No entanto, no texto explicativo, lê-se: \"699 mil estrangeiros residentes em Portugal em 2022\". O ano correto deveria ser 2021.\n",
+    "\n",
+    "    A informação apresentada no texto sobre o sexo dos estrangeiros não pode ser obtida a partir do gráfico apresentado. O gráfico mostra a distribuição dos estrangeiros residentes em Portugal por sexo, enquanto o texto menciona um aumento da proporção do sexo masculino no total de estrangeiros residentes, o que não é evidenciado visualmente."
    ]
   },
   {
@@ -2419,7 +2434,7 @@
    "metadata": {},
    "source": [
     "## Dataset\n",
-    "O *dataset* contém cerca observações diárias da meteorologia de vários locais na Austrália. A variável que interessa prever é \"RainTomorrow\".\n",
+    "O *dataset* contém observações diárias da meteorologia de vários locais na Austrália. A variável que interessa prever é \"RainTomorrow\".\n",
     "Cada linha representa um dia, cada variável um atributo relativo ao clima ou localização.\n",
     "\n",
     "## Conteúdo\n",
