--- a/4_data_visualization/avaliacao/avaliacao_data_viz.ipynb
+++ b/4_data_visualization/avaliacao/avaliacao_data_viz.ipynb
@@ -2528,7 +2528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nome_do_ambiente",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2542,7 +2542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
