machine_learning_aula4

--- a/8_machine_learning/aula3/LAB2.2 - Applying KMeans in Tugas - ToFill.ipynb
+++ b/8_machine_learning/aula3/LAB2.2 - Applying KMeans in Tugas - ToFill.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -448,7 +448,7 @@
        "[10000 rows x 19 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2262,6 +2262,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Custid</th>\n",
        "      <th>Year_Birth</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Education</th>\n",
@@ -2281,31 +2282,11 @@
        "      <th>CatPurchase</th>\n",
        "      <th>Recomendation</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Custid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1001</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
        "      <td>1947</td>\n",
        "      <td>F</td>\n",
        "      <td>Graduation</td>\n",
@@ -2326,7 +2307,8 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1002</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
        "      <td>1937</td>\n",
        "      <td>F</td>\n",
        "      <td>PhD</td>\n",
@@ -2347,7 +2329,8 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1003</th>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
        "      <td>1991</td>\n",
        "      <td>M</td>\n",
        "      <td>Graduation</td>\n",
@@ -2368,7 +2351,8 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1004</th>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
        "      <td>1956</td>\n",
        "      <td>M</td>\n",
        "      <td>Master</td>\n",
@@ -2389,7 +2373,8 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1005</th>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
        "      <td>1956</td>\n",
        "      <td>F</td>\n",
        "      <td>Graduation</td>\n",
@@ -2429,9 +2414,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10996</th>\n",
+       "      <th>9995</th>\n",
+       "      <td>10996</td>\n",
        "      <td>1987</td>\n",
        "      <td>F</td>\n",
        "      <td>Graduation</td>\n",
@@ -2452,7 +2439,8 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10997</th>\n",
+       "      <th>9996</th>\n",
+       "      <td>10997</td>\n",
        "      <td>1939</td>\n",
        "      <td>F</td>\n",
        "      <td>2n Cycle</td>\n",
@@ -2473,7 +2461,8 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10998</th>\n",
+       "      <th>9997</th>\n",
+       "      <td>10998</td>\n",
        "      <td>1946</td>\n",
        "      <td>M</td>\n",
        "      <td>Master</td>\n",
@@ -2494,7 +2483,8 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10999</th>\n",
+       "      <th>9998</th>\n",
+       "      <td>10999</td>\n",
        "      <td>1950</td>\n",
        "      <td>F</td>\n",
        "      <td>Basic</td>\n",
@@ -2515,7 +2505,8 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11000</th>\n",
+       "      <th>9999</th>\n",
+       "      <td>11000</td>\n",
        "      <td>1995</td>\n",
        "      <td>M</td>\n",
        "      <td>Basic</td>\n",
@@ -2537,56 +2528,66 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 18 columns</p>\n",
+       "<p>10000 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Year_Birth Gender   Education Marital_Status  Dependents     Income  \\\n",
-       "Custid                                                                        \n",
-       "1001          1947      F  Graduation          Widow           0   95321.10   \n",
-       "1002          1937      F         PhD          Widow           0  118674.15   \n",
-       "1003          1991      M  Graduation            NaN           1   29761.20   \n",
-       "1004          1956      M      Master        Married           1   98249.55   \n",
-       "1005          1956      F  Graduation        Married           1   96444.60   \n",
-       "...            ...    ...         ...            ...         ...        ...   \n",
-       "10996         1987      F  Graduation         Single           0   57006.60   \n",
-       "10997         1939      F    2n Cycle       Together           1  132260.10   \n",
-       "10998         1946      M      Master        Married           0  104609.40   \n",
-       "10999         1950      F       Basic        Married           1  116568.90   \n",
-       "11000         1995      M       Basic       Together           1   27704.25   \n",
+       "      Custid  Year_Birth Gender   Education Marital_Status  Dependents  \\\n",
+       "0       1001        1947      F  Graduation          Widow           0   \n",
+       "1       1002        1937      F         PhD          Widow           0   \n",
+       "2       1003        1991      M  Graduation            NaN           1   \n",
+       "3       1004        1956      M      Master        Married           1   \n",
+       "4       1005        1956      F  Graduation        Married           1   \n",
+       "...      ...         ...    ...         ...            ...         ...   \n",
+       "9995   10996        1987      F  Graduation         Single           0   \n",
+       "9996   10997        1939      F    2n Cycle       Together           1   \n",
+       "9997   10998        1946      M      Master        Married           0   \n",
+       "9998   10999        1950      F       Basic        Married           1   \n",
+       "9999   11000        1995      M       Basic       Together           1   \n",
        "\n",
-       "       Dt_Customer  Rcn  Frq      Mnt  Clothes  Kitchen  SmallAppliances  \\\n",
-       "Custid                                                                     \n",
-       "1001    2013-11-02   66   33  1458.08       37        5               44   \n",
-       "1002    2014-04-17    6   32  1598.48       55        1               38   \n",
-       "1003    2014-05-27   69   11    45.76       32       19               24   \n",
-       "1004    2013-07-21   10   26   923.52       60       10               19   \n",
-       "1005    2013-02-02   26   31  1183.52       59        5               28   \n",
-       "...            ...  ...  ...      ...      ...      ...              ...   \n",
-       "10996   2013-05-08   72   29  1051.44       41       11               36   \n",
-       "10997   2014-04-03   75   38  1734.72       61        2               25   \n",
-       "10998   2014-05-24   98   33  1527.76       46        0               29   \n",
-       "10999   2014-05-12    4   32  1404.00       48       16               27   \n",
-       "11000   2013-11-20   24    9    47.84        5       13               21   \n",
+       "         Income Dt_Customer  Rcn  Frq      Mnt  Clothes  Kitchen  \\\n",
+       "0      95321.10  2013-11-02   66   33  1458.08       37        5   \n",
+       "1     118674.15  2014-04-17    6   32  1598.48       55        1   \n",
+       "2      29761.20  2014-05-27   69   11    45.76       32       19   \n",
+       "3      98249.55  2013-07-21   10   26   923.52       60       10   \n",
+       "4      96444.60  2013-02-02   26   31  1183.52       59        5   \n",
+       "...         ...         ...  ...  ...      ...      ...      ...   \n",
+       "9995   57006.60  2013-05-08   72   29  1051.44       41       11   \n",
+       "9996  132260.10  2014-04-03   75   38  1734.72       61        2   \n",
+       "9997  104609.40  2014-05-24   98   33  1527.76       46        0   \n",
+       "9998  116568.90  2014-05-12    4   32  1404.00       48       16   \n",
+       "9999   27704.25  2013-11-20   24    9    47.84        5       13   \n",
        "\n",
-       "        HouseKeeping  Toys  NetPurchase  CatPurchase  Recomendation  \n",
-       "Custid                                                               \n",
-       "1001              10     3           19           81              5  \n",
-       "1002               4     2            9           91              5  \n",
-       "1003               1    24           59           41              3  \n",
-       "1004               6     5           35           65              5  \n",
-       "1005               4     4           34           66              5  \n",
-       "...              ...   ...          ...          ...            ...  \n",
-       "10996              1    11           31           69              4  \n",
-       "10997              5     6           45           55              5  \n",
-       "10998             11    14           18           82              6  \n",
-       "10999              8     1           36           64              5  \n",
-       "11000             46    15           52           48              2  \n",
+       "      SmallAppliances  HouseKeeping  Toys  NetPurchase  CatPurchase  \\\n",
+       "0                  44            10     3           19           81   \n",
+       "1                  38             4     2            9           91   \n",
+       "2                  24             1    24           59           41   \n",
+       "3                  19             6     5           35           65   \n",
+       "4                  28             4     4           34           66   \n",
+       "...               ...           ...   ...          ...          ...   \n",
+       "9995               36             1    11           31           69   \n",
+       "9996               25             5     6           45           55   \n",
+       "9997               29            11    14           18           82   \n",
+       "9998               27             8     1           36           64   \n",
+       "9999               21            46    15           52           48   \n",
        "\n",
-       "[10000 rows x 18 columns]"
+       "      Recomendation  \n",
+       "0                 5  \n",
+       "1                 5  \n",
+       "2                 3  \n",
+       "3                 5  \n",
+       "4                 5  \n",
+       "...             ...  \n",
+       "9995              4  \n",
+       "9996              5  \n",
+       "9997              6  \n",
+       "9998              5  \n",
+       "9999              2  \n",
+       "\n",
+       "[10000 rows x 19 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2604,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2634,18 +2635,10 @@
        "      <th>NetPurchase</th>\n",
        "      <th>Mnt</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Custid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1001</th>\n",
+       "      <th>0</th>\n",
        "      <td>66</td>\n",
        "      <td>95321.10</td>\n",
        "      <td>33</td>\n",
@@ -2653,7 +2646,7 @@
        "      <td>1458.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1002</th>\n",
+       "      <th>1</th>\n",
        "      <td>6</td>\n",
        "      <td>118674.15</td>\n",
        "      <td>32</td>\n",
@@ -2661,7 +2654,7 @@
        "      <td>1598.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1003</th>\n",
+       "      <th>2</th>\n",
        "      <td>69</td>\n",
        "      <td>29761.20</td>\n",
        "      <td>11</td>\n",
@@ -2669,7 +2662,7 @@
        "      <td>45.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1004</th>\n",
+       "      <th>3</th>\n",
        "      <td>10</td>\n",
        "      <td>98249.55</td>\n",
        "      <td>26</td>\n",
@@ -2677,7 +2670,7 @@
        "      <td>923.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1005</th>\n",
+       "      <th>4</th>\n",
        "      <td>26</td>\n",
        "      <td>96444.60</td>\n",
        "      <td>31</td>\n",
@@ -2693,7 +2686,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10996</th>\n",
+       "      <th>9995</th>\n",
        "      <td>72</td>\n",
        "      <td>57006.60</td>\n",
        "      <td>29</td>\n",
@@ -2701,7 +2694,7 @@
        "      <td>1051.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10997</th>\n",
+       "      <th>9996</th>\n",
        "      <td>75</td>\n",
        "      <td>132260.10</td>\n",
        "      <td>38</td>\n",
@@ -2709,7 +2702,7 @@
        "      <td>1734.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10998</th>\n",
+       "      <th>9997</th>\n",
        "      <td>98</td>\n",
        "      <td>104609.40</td>\n",
        "      <td>33</td>\n",
@@ -2717,7 +2710,7 @@
        "      <td>1527.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10999</th>\n",
+       "      <th>9998</th>\n",
        "      <td>4</td>\n",
        "      <td>116568.90</td>\n",
        "      <td>32</td>\n",
@@ -2725,7 +2718,7 @@
        "      <td>1404.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11000</th>\n",
+       "      <th>9999</th>\n",
        "      <td>24</td>\n",
        "      <td>27704.25</td>\n",
        "      <td>9</td>\n",
@@ -2738,24 +2731,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        Rcn     Income  Frq  NetPurchase      Mnt\n",
-       "Custid                                           \n",
-       "1001     66   95321.10   33           19  1458.08\n",
-       "1002      6  118674.15   32            9  1598.48\n",
-       "1003     69   29761.20   11           59    45.76\n",
-       "1004     10   98249.55   26           35   923.52\n",
-       "1005     26   96444.60   31           34  1183.52\n",
-       "...     ...        ...  ...          ...      ...\n",
-       "10996    72   57006.60   29           31  1051.44\n",
-       "10997    75  132260.10   38           45  1734.72\n",
-       "10998    98  104609.40   33           18  1527.76\n",
-       "10999     4  116568.90   32           36  1404.00\n",
-       "11000    24   27704.25    9           52    47.84\n",
+       "      Rcn     Income  Frq  NetPurchase      Mnt\n",
+       "0      66   95321.10   33           19  1458.08\n",
+       "1       6  118674.15   32            9  1598.48\n",
+       "2      69   29761.20   11           59    45.76\n",
+       "3      10   98249.55   26           35   923.52\n",
+       "4      26   96444.60   31           34  1183.52\n",
+       "...   ...        ...  ...          ...      ...\n",
+       "9995   72   57006.60   29           31  1051.44\n",
+       "9996   75  132260.10   38           45  1734.72\n",
+       "9997   98  104609.40   33           18  1527.76\n",
+       "9998    4  116568.90   32           36  1404.00\n",
+       "9999   24   27704.25    9           52    47.84\n",
        "\n",
        "[10000 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3423,11 +3415,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "K=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_value' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_prod_k3 \u001b[38;5;241m=\u001b[39m \u001b[43mdf_value\u001b[49m\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m      2\u001b[0m model_k3 \u001b[38;5;241m=\u001b[39m KMeans(n_clusters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m)\u001b[38;5;241m.\u001b[39mfit(df_prod_k3)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_value' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_prod_k3 = df_value.copy()\n",
+    "model_k3 = KMeans(n_clusters=3, random_state = 100).fit(df_prod_k3)"
+   ]
   },
   {
    "cell_type": "markdown",
