finishing feature selection

--- a/10_applied/2024 EDIT LTP__PraticalCase/LTP_PraticalCase Dataset/Feacture_Selecion.ipynb
+++ b/10_applied/2024 EDIT LTP__PraticalCase/LTP_PraticalCase Dataset/Feacture_Selecion.ipynb
@@ -91,7 +91,7 @@
         "id": "UDx1lV85l-6v"
       },
       "source": [
-        "# VARIÁVEIS CATEGORICAS\n"
+        "## VARIÁVEIS CATEGORICAS\n"
       ]
     },
     {
@@ -100,7 +100,7 @@
         "id": "yuopKaTCEM6O"
       },
       "source": [
-        "## Chi-Square (Filter Method) - SelectKBest\n",
+        "### Chi-Square (Filter Method) - SelectKBest\n",
         "\n",
         "    "
       ]
@@ -507,7 +507,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Usando Label Encoder"
+        "#### Usando Label Encoder"
       ]
     },
     {
@@ -643,7 +643,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Usando Get_dummies"
+        "#### Usando Get_dummies"
       ]
     },
     {
@@ -761,7 +761,7 @@
         "id": "4DFmNJ2mlHfH"
       },
       "source": [
-        "## Chi-Square (Filter Method) - chi2_contingency\n"
+        "### Chi-Square (Filter Method) - chi2_contingency\n"
       ]
     },
     {
@@ -2209,7 +2209,7 @@
         "id": "yUqXNinHmHPY"
       },
       "source": [
-        "# VARIÀVEIS NUMÉRICAS"
+        "## VARIÀVEIS NUMÉRICAS"
       ]
     },
     {
@@ -2678,7 +2678,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Variância"
+        "### Variância"
       ]
     },
     {
@@ -2910,7 +2910,7 @@
         "id": "h9cqWqtJqz-F"
       },
       "source": [
-        "## Spearman"
+        "### Spearman"
       ]
     },
     {
@@ -3159,7 +3159,7 @@
         "id": "RO8gzZR-sQjp"
       },
       "source": [
-        "## Arvore de Decisão\n"
+        "### Arvore de Decisão\n"
       ]
     },
     {
@@ -3364,7 +3364,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Recursive Feature Elimination (RFE)"
+        "### Recursive Feature Elimination (RFE)"
       ]
     },
     {
@@ -3384,7 +3384,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Lasso"
+        "### Lasso"
       ]
     },
     {
@@ -3741,6 +3741,72 @@
       ],
       "source": [
         "select_best_features(X4, y4)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Resumo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "| Predictor | RFE | Lasso | DT | What to do? (One possible way to \"solve\") | \n",
+        "| --- | --- | --- | --- | --- |\n",
+        "Selling_square_ft      | 5 YES | 5 YES | 5 YES | KEEP |\n",
+        "labelling_day             | 5 YES | 5 YES | 5 YES | KEEP |\n",
+        "oldpvp             | 5 YES | 5 YES | 5 YES | KEEP |\n",
+        "weight (g)         | 5 YES | 5 YES | 5 YES | KEEP |\n",
+        "Margem_num         | 0 YES | 5 YES | 5 YES | TRY WITH AND WITHOUT |\n",
+        "perc_expiring_sku | 5 YES | 5 YES | 5 YES | KEEP |\n",
+        "labelqty    | 0 YES | 0 YES | 0 YES | REMOVE |\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 239,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['idstore', 'sku', 'brand', 'oldpvp', 'labelqty', 'weight (g)',\n",
+              "       'Profit (â‚¬)', 'perc_expiring_sku', 'sold', 'type',\n",
+              "       'selling_square_ft', 'district', 'new_pvp', 'discount', 'Margem_num',\n",
+              "       'selling_day', 'selling_day_of_week', 'vida_util_apos_label',\n",
+              "       'labelling_day_of_week', 'labelling_day', 'new_pvp_calculado',\n",
+              "       'diferenca_new_pvp', 'dif_sell_labelling_date',\n",
+              "       'dif_exp_labelling_date'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "execution_count": 239,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "db.columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 240,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "keep_data = db[['selling_square_ft','labelling_day','oldpvp','weight (g)','perc_expiring_sku']].copy()\n",
+        "all_data =  db[['selling_square_ft','labelling_day','oldpvp','weight (g)','perc_expiring_sku', 'Margem_num']].copy()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 6. Model"
       ]
     }
   ],
